# records-mover

./: .dockerignore  .gitignore  .markdown.style.rb  .mdlrc  .python-version  .readthedocs.yml  CODE_OF_CONDUCT.md  DRIVERS.md  Dockerfile  Dockerfile.dev  INSTALL.md  LOADING_SUPPORT.md  MAINT.md  Makefile  README.md  Rakefile.quality  SECURITY.md  deps.sh  docker-compose.yaml  itest  itest-dc  publish.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  setuputils.py  wait-for-mysql.sh  wait-for-postgres.sh
.circleci/: config.yml
.github/workflows/: test.yml  unittest.yml
docs/: CONFIG.md  DRIVERS.md  INSTALL.md  MAINT.md  Makefile  RECORDS_SPEC.md  SECURITY.md  UNLOADING_SUPPORT.md  terminalizer.yml
docs/schema/: Makefile  SCHEMAv1.md  pandas_example_1.json  records_schema_v1_schema.json  redshift_example_1.json
docs/source/: .gitignore  conf.py  index.rst  modules.rst  records_mover.airflow.hooks.rst  records_mover.airflow.rst  records_mover.cli.rst  records_mover.creds.rst  records_mover.db.bigquery.rst  records_mover.db.mysql.rst  records_mover.db.postgres.copy_options.rst  records_mover.db.postgres.rst  records_mover.db.redshift.rst  records_mover.db.rst  records_mover.db.vertica.rst  records_mover.pandas.rst  records_mover.records.delimited.rst  records_mover.records.job.rst  records_mover.records.pandas.rst  records_mover.records.rst  records_mover.records.schema.field.constraints.rst  records_mover.records.schema.field.rst  records_mover.records.schema.rst  records_mover.records.schema.schema.rst  records_mover.records.sources.rst  records_mover.records.targets.rst  records_mover.records.targets.table.rst  records_mover.rst  records_mover.url.gcs.rst  records_mover.url.rst  records_mover.url.s3.rst  records_mover.utils.rst  requirements.txt  sphinx_requirements.txt
metrics/: coverage_high_water_mark  mypy_high_water_mark
records_mover/: DRIVERS.md  __init__.py  base_job_context.py  check_db_conn_engine.py  database.py  env_job_context.py  itest_job_context.py  job_context.py  log_levels.py  logging.py  mover_types.py  s3_url.py  session.py  temp_dir.py  types.py  version.py
records_mover/airflow/: __init__.py  airflow_job_context.py
records_mover/airflow/hooks/: __init__.py  google_cloud_credentials_hook.py  records_hook.py  (+1 more)
records_mover/cli/: cli_job_context.py  cli_logging.py  job_config_schema_as_args_parser.py
records_mover/creds/: base_creds.py  creds_via_airflow.py  creds_via_env.py  creds_via_lastpass.py  database.py  lpass.py
records_mover/db/: __init__.py  connect.py  db_conn_composable_methods.py  db_conn_composition_methods.py  db_conn_mixin.py  db_type.py  driver.py  errors.py  factory.py  loader.py  quoting.py  unloader.py
records_mover/pandas/: __init__.py  sparsedf.py
records_mover/records/: __init__.py  base_records_format.py  cli.py  compression.py  csv_streamer.py  deprecated.py  errors.py  existing_table_handling.py  format_sniff.py  hint.py  hints.py  hintutils.py  load_plan.py  mover.py  prep.py  prep_and_load.py  processing_instructions.py  records.py  records_directory.py  records_format.py  records_format_file.py  records_schema_json_file.py  records_schema_sql_file.py  records_types.py  results.py  table.py  types.py  unload_plan.py  validated_records_hints.py
records_mover/url/: __init__.py  base.py  filesystem.py  http.py  resolver.py  urllib.py
records_mover/utils/: __init__.py  concat_files.py  json_parameter.py  json_schema.py  json_schema_array_document.py  json_schema_document.py  lazyprop.py  limits.py  retry.py  rewound_fileobj.py  structures.py
tests/: README.md
tests/component/: test_secrets_redacting_log_stream.py
tests/integration/: TORTURE.md  circleci-dbfacts.yml  docker-compose.yml  inside-docker-dbfacts.yml  itest  itest-dc  test_docs_build.sh  wait-for-vertica.sh
tests/unit/: test_airflow_job_context.py  test_check_db_conn_engine.py  test_cli_job_context.py  test_cli_job_context_engine.py  test_cli_job_context_records.py  test_cli_logging.py  test_cli_session.py  test_cli_session_engine.py  test_cli_session_records.py  test_database.py  test_job_context.py  test_job_context_choices.py  test_job_context_records.py  test_public_interface.py  test_records_hook.py  test_s3_url.py  test_secrets_redacting_filter.py  test_session.py  test_session_choices.py  test_session_records.py  test_top_level.py  test_utils.py  workproduct.txt
tests/unitalldeps/: test_database.py
types/stubs/: argparse_types.pyi  inspect.pyi
(+483 files in other folders)
